--- a/nbdcpp/Makefile
+++ b/nbdcpp/Makefile
@@ -1,7 +1,14 @@
-CPPFLAGS = -std=c++11 -pedantic -Wall -Wextra -Werror -Wno-unused-parameter -fmax-errors=1
+CXX ?= g++
+CPPFLAGS ?= -Wall -Wextra -Werror -Wno-unused-parameter -fmax-errors=1
+CXXFLAGS ?= -std=c++11 -pedantic
 CPPFLAGS += -ggdb -Og
 
-EXPROGS = ramdisk
+EXPROGS = ramdisk loopback
+
+all: $(EXPROGS)
 
 $(EXPROGS): %: %.cpp nbdserv.h
-	g++ $(CPPFLAGS) $< -o $@
+	$(CXX) $(CPPFLAGS) $(CXXFLAGS) $(LDFLAGS) $< $(LOADLIBES) $(LDLIBS) -o $@
+
+clean:
+	rm -f $(EXPROGS)
